--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "description": "",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "generate-types": "npx openapi-typescript https://petstore.swagger.io/v2/swagger.json --output apiTypes.d.ts"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.4.2",
     "acorn": "^8.8.2",
     "acorn-import-assertions": "^1.8.0",
     "ajv": "^6.12.6",
@@ -99,6 +101,8 @@
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
     "html-webpack-plugin": "^5.5.0",
+    "openapi-typescript": "^5.1.0",
+    "tailwindcss": "^3.2.7",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.76.1",
