Fix the structure and use tailwindcss.

--- a/package.json
+++ b/package.json
@@ -11,102 +11,34 @@
     "start": "webpack serve --mode development",
     "generate-types": "npx openapi-typescript https://petstore.swagger.io/v2/swagger.json --output apiTypes.d.ts"
   },
-  "dependencies": {
-    "@material-tailwind/react": "^1.4.2",
-    "acorn": "^8.8.2",
-    "acorn-import-assertions": "^1.8.0",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "ansi-styles": "^4.3.0",
-    "braces": "^3.0.2",
-    "browserslist": "^4.21.5",
-    "buffer-from": "^1.1.2",
-    "caniuse-lite": "^1.0.30001465",
-    "chalk": "^4.1.2",
-    "chrome-trace-event": "^1.0.3",
-    "ci-info": "^3.8.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "commander": "^2.20.3",
-    "csstype": "^3.1.1",
-    "diff-sequences": "^29.4.3",
-    "electron-to-chromium": "^1.4.328",
-    "enhanced-resolve": "^5.12.0",
-    "es-module-lexer": "^0.9.3",
-    "escalade": "^3.1.1",
-    "escape-string-regexp": "^2.0.0",
-    "eslint-scope": "^5.1.1",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^4.3.0",
-    "events": "^3.3.0",
-    "expect": "^29.5.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fill-range": "^7.0.1",
-    "glob-to-regexp": "^0.4.1",
-    "graceful-fs": "^4.2.10",
-    "has-flag": "^4.0.0",
-    "is-number": "^7.0.0",
-    "jest-diff": "^29.5.0",
-    "jest-get-type": "^29.4.3",
-    "jest-matcher-utils": "^29.5.0",
-    "jest-message-util": "^29.5.0",
-    "jest-util": "^29.5.0",
-    "jest-worker": "^27.5.1",
-    "js-tokens": "^4.0.0",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-schema-traverse": "^0.4.1",
-    "loader-runner": "^4.3.0",
-    "lru-cache": "^6.0.0",
-    "merge-stream": "^2.0.0",
-    "micromatch": "^4.0.5",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
-    "neo-async": "^2.6.2",
-    "node-releases": "^2.0.10",
-    "picocolors": "^1.0.0",
-    "picomatch": "^2.3.1",
-    "pretty-format": "^29.5.0",
-    "punycode": "^2.3.0",
-    "randombytes": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "safe-buffer": "^5.2.1",
-    "schema-utils": "^3.1.1",
-    "semver": "^7.3.8",
-    "serialize-javascript": "^6.0.1",
-    "slash": "^3.0.0",
-    "source-map": "^0.6.1",
-    "source-map-support": "^0.5.21",
-    "stack-utils": "^2.0.6",
-    "supports-color": "^7.2.0",
-    "tapable": "^2.2.1",
-    "terser": "^5.16.6",
-    "terser-webpack-plugin": "^5.3.7",
-    "to-regex-range": "^5.0.1",
-    "update-browserslist-db": "^1.0.10",
-    "uri-js": "^4.4.1",
-    "watchpack": "^2.4.0",
-    "webpack-sources": "^3.2.3",
-    "yallist": "^4.0.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.15.1",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.7.3",
+    "cssnano": "^5.0.8",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss": "^8.3.9",
+    "postcss-cli": "^9.0.1",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.0",
+    "style-loader": "^3.3.2",
     "openapi-typescript": "^5.1.0",
-    "tailwindcss": "^3.2.7",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1",
+    "tailwindcss": "^2.2.17",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
